resilient/tests/goldens/compound_trait_bounds_missing_second_err.txt
exit=1
<tmp>.rz:6:34: type `Circle` does not satisfy bound `T: Sizable` at call to `render` (no `impl Sizable for Circle` and required methods are missing)
<tmp>.rz:6:34: type `Circle` does not satisfy bound `T: Sizable` at call to `render` (no `impl Sizable for Circle` and required methods are missing)
error: type `Circle` does not satisfy bound `T: Sizable` at call to `render` (no `impl Sizable for Circle` and required methods are missing)
   fn main(int _d) { println(render(new Circle { radius: 4 })); }
                                    ^
